# CNN_DEEP_CLASSIFIER

./: .gitignore  README.md  dvc.yaml  init_setup.sh  readme.md  requirements.txt  requirements_dev.txt  scores.json  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yml
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2023-04-22-21-50-23/train/: events.out.tfevents.1682180428.MSI.1944.0.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2023-04-22-21-50-23/validation/: events.out.tfevents.1682183156.MSI.1944.1.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2023-04-23-00-38-00/train/: events.out.tfevents.1682190482.MSI.9032.0.v2
configs/: config.yaml
research/: st01.ipynb  st_02.ipynb  st_04.ipynb  trails.ipynb
research/logs/: st_03.ipynb
src/deepclassifier/components/: __init__.py  data_ingestion.py  evaluation.py  prepare_base_model.py  prepare_callbacks_config.py  training.py
src/deepclassifier/config/: __init__.py  configuration.py
src/deepclassifier/constants/: __init__.py
src/deepclassifier/entity/: __init__.py  config_entity.py
src/deepclassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_prepare_callbacks.py  stage_04_traning.py  stage_05_evaluation_stage
tests/integration/: test_int.py
tests/unit/: test_utils.py
