[metadata]
license=MIT
license_file=LICENSE
classifier=
    Programing Language :: Python::3.8
    Operating System :: OS Independent

[options]
install_requires =
    ensure==1.0.2
python_requires= >=3.7

[option.extras_require]
testing=
    pytest>=7.1.3 # unit and integration test purpose
    mypy>=0.971  # check for typing error
    flake8>=5.0.4 # Any other Mistake [like extra space etc.]
    tox>=3.25.1 # Help to create different environment and test locally
    black>=22.8.0 # Formatting Purpose

[options.package_data]
deepClassifier = py.typed
  
[flake8]
max-line-length = 160
exclude = __init__.py
